--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,11 @@ li{
   margin: auto;
   text-align: center;
 }
+
+.chart-container{
+  position: relative; 
+  width:45%;
+  display: inline-block;
+  padding: 10px;
+  
+}
