--- a/components/chart/LineChart.module.css
+++ b/components/chart/LineChart.module.css
@@ -6,3 +6,15 @@
         padding: 10px;
         
       }
+      
+      @media (min-width: 200px) and (max-width: 1024px){
+       
+    
+        .chartContainer{
+          position: relative; 
+          width:100%;
+          display: block;
+          padding: 10px;
+          
+        }
+    }
