--- a/components/layout/main-header.module.css
+++ b/components/layout/main-header.module.css
@@ -14,7 +14,7 @@
     font-family: 'Fira', sans-serif;
     height: 100%;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     color: #94fdfd;
   }
@@ -30,6 +30,11 @@
     font-size: 1rem;
   }
   
+  .link{
+    padding: 5px;
+    display:inline;
+  }
+
   @media (min-width: 768px) {
     .logo {
       font-size: 2.5rem;
