--- a/pages/releases/releases.module.css
+++ b/pages/releases/releases.module.css
@@ -1,10 +1,31 @@
+.gridContainer{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+  
+    gap: 10px;
+ 
+}
+
+.gridItem{
+background-color: aqua;
+
+
+}
+
+.gridItem1{
+color: blue;
+
+}
+
+
 .release{
 display: inline-block;
 padding: 10px;
 width: 175px;
 text-align: center;
-}
+} 
 
 .releaseContainer{
-    width: 100%;
-}
+width: 100%;
+} 
+        
