--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,14 +69,19 @@ li .link{
 }
 
 .card{
-  width: 30%;
+  width: 25%;
   height: 200px;
   display: inline-block;
   background-color: rgb(166, 179, 179);
   margin: 15px;
   text-align: center;
-  border-radius: 10%;
+  border-radius: 25px;
   vertical-align: middle;
+  min-width: 130px;
+}
+.card:hover{
+  background-color: #414141;
+  color: whitesmoke;
 }
 
   /* Media Query for Tablets Ipads portrait mode */
@@ -91,6 +96,17 @@ li .link{
       display: inline-block;
       padding: 10px;
       
+    }
+
+    .card{
+      width: auto;
+      height: 100px;
+      display: block;
+      background-color: rgb(166, 179, 179);
+      margin: 15px;
+      text-align: center;
+      border-radius: 25px;
+      min-width: 130px;
     }
 
   
