--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,12 +20,19 @@ h6 {
   font-family: 'Lato', sans-serif;
   color: #2b2b2b;
 }
+p{
+  font-family: 'Lato', sans-serif;
+  color: #2b2b2b;
+}
 
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
   
+}
+a{
+  text-decoration: none;
 }
 
 
@@ -78,6 +85,7 @@ li .link{
   border-radius: 25px;
   vertical-align: middle;
   min-width: 130px;
+  
 }
 .card:hover{
   background-color: #414141;
@@ -89,7 +97,19 @@ li .link{
     body {
         background-color: #202020;
     }
-
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-family: 'Lato', sans-serif;
+      color: whitesmoke;
+    }
+    p{
+      font-family: 'Lato', sans-serif;
+      color: whitesmoke; 
+    }
     .chart-container{
       position: relative; 
       width:100%;
@@ -102,11 +122,12 @@ li .link{
       width: auto;
       height: 100px;
       display: block;
-      background-color: rgb(166, 179, 179);
+      background-color: dimgray;
       margin: 15px;
       text-align: center;
       border-radius: 25px;
       min-width: 130px;
+  
     }
 
   
